--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <main>
             <canvas id="canvas"><!-- play it, a game --></canvas>
         </main>
-        <aside id="btm-left"><h2>200</h2></aside>
+        <aside id="btm-left"><h2 id="">200</h2></aside>
         <aside id="btm-right"><h2 id="status">Find my shell!!</h2></aside>
       </div>
 </body>
 
-<script src="./script.js"></script>
+<script src="./JS/main.js"></script>
 </html>
