--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 </head>
 <body>
     <div id="game-screen">
-        <aside id="top-left"><h2>Hermie's Journey</h2></aside>
+        <aside id="top-left"><h2 id="title">Hermie's Journey</h2></aside>
         <aside id="top-right"><h2 id="timer">Time</h2></aside>
         <main>
             <canvas id="canvas"><!-- play it, a game --></canvas>
         </main>
-        <aside id="btm-left"><h2 id="">200</h2></aside>
-        <aside id="btm-right"><h2 id="status">Find my shell!!</h2></aside>
       </div>
 </body>
 
